[tool.poetry]
name = "ooba"
version = "0.0.5"
description = "Run language models on consumer hardware."
authors = ["Killian Lucas <killian@openinterpreter.com>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
appdirs = "^1.4.4"
huggingface-hub = "^0.17.3"
websockets = "^11.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"